k8s/cluster/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: frontend-http
    nodePort: 30723
    port: 80
    protocol: TCP
    targetPort: 3001
  - name: frontend-https
    nodePort: 31583
    port: 443
    protocol: TCP
    targetPort: 3001
  selector:
    app: digraph
    tier: frontend
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: digraph
    tier: frontend
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: digraph
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: digraph
        tier: frontend
    spec:
      containers:
      - name: api
        image: emwalker/digraph-api:v243
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: 100Mi
          limits:
            memory: 200Mi
      - name: frontend
        image: emwalker/digraph-node:v243
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: http
          protocol: TCP
        resources:
          requests:
            memory: 150Mi
          limits:
            memory: 400Mi
      restartPolicy: Always
